--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "16.12.0",
   "description": "React package for shallow rendering.",
   "main": "index.js",
+  "module": "esm/index.js",
   "repository": "https://github.com/NMinhNguyen/react-shallow-renderer.git",
   "keywords": [
     "react",
@@ -24,15 +25,24 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-syntax-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.8.3",
     "@babel/plugin-transform-react-jsx-source": "^7.8.3",
+    "@babel/plugin-transform-template-literals": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
-    "@babel/preset-flow": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.0",
     "babel-jest": "^25.1.0",
+    "fs-extra": "^8.1.0",
     "jest": "^25.1.0",
     "jest-diff": "^25.1.0",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "rimraf": "^3.0.1",
+    "rollup": "^1.30.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-strip-banner": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
@@ -40,13 +50,15 @@
   "files": [
     "LICENSE",
     "README.md",
-    "build-info.json",
     "index.js",
-    "shallow.js",
     "cjs/",
+    "esm/",
     "umd/"
   ],
   "scripts": {
+    "prebuild": "rimraf build",
+    "build": "rollup --config",
+    "postbuild": "node ./scripts/copyFiles.js",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand --no-cache"
   }
