--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "react-test-renderer",
+  "name": "react-shallow-renderer",
   "version": "16.12.0",
-  "description": "React package for snapshot testing.",
+  "description": "React package for shallow rendering.",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/facebook/react.git",
-    "directory": "packages/react-test-renderer"
-  },
+  "module": "esm/index.js",
+  "repository": "https://github.com/NMinhNguyen/react-shallow-renderer.git",
   "keywords": [
     "react",
     "react-native",
@@ -15,28 +12,36 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/facebook/react/issues"
+    "url": "https://github.com/NMinhNguyen/react-shallow-renderer/issues"
   },
   "homepage": "https://reactjs.org/",
   "dependencies": {
     "object-assign": "^4.1.1",
-    "prop-types": "^15.6.2",
-    "react-is": "^16.8.6",
-    "scheduler": "^0.18.0"
+    "prop-types": "^15.7.2",
+    "react-is": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-syntax-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.8.3",
     "@babel/plugin-transform-react-jsx-source": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-flow": "^7.8.3",
+    "@babel/plugin-transform-template-literals": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.0",
     "babel-jest": "^25.1.0",
+    "fs-extra": "^8.1.0",
     "jest": "^25.1.0",
     "jest-diff": "^25.1.0",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "rimraf": "^3.0.1",
+    "rollup": "^1.30.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-strip-banner": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
@@ -44,13 +49,15 @@
   "files": [
     "LICENSE",
     "README.md",
-    "build-info.json",
     "index.js",
-    "shallow.js",
     "cjs/",
+    "esm/",
     "umd/"
   ],
   "scripts": {
+    "prebuild": "rimraf build",
+    "build": "rollup --config",
+    "postbuild": "node ./scripts/copyFiles.js",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand --no-cache"
   }
