Add ESLint and Prettier
Closes #5.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
           paths:
             - ~/.cache/yarn
 
+      - run: yarn lint
+
       - run: yarn test
 
       - run: yarn build
