--- a/package.json
+++ b/package.json
@@ -21,21 +21,31 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.8.6",
     "@babel/plugin-transform-react-jsx-source": "^7.8.3",
     "@babel/plugin-transform-template-literals": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.3.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
+    "confusing-browser-globals": "^1.0.9",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
     "fs-extra": "^8.1.0",
+    "husky": "^4.2.3",
     "jest": "^25.1.0",
     "jest-diff": "^25.1.0",
+    "lint-staged": "^10.0.8",
+    "prettier": "1.19.1",
     "react": "^16.12.0",
     "rimraf": "^3.0.1",
     "rollup": "^1.30.1",
@@ -57,7 +67,16 @@
     "prebuild": "rimraf build",
     "build": "rollup --config",
     "postbuild": "node ./scripts/copyFiles.js",
+    "lint": "eslint --ignore-path .gitignore .",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand --no-cache"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
