--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "homepage": "https://reactjs.org/",
   "dependencies": {
     "object-assign": "^4.1.1",
-    "react-is": "^16.12.0"
+    "react-is": "^16.12.0 || ^17.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -52,7 +52,7 @@
     "rollup-plugin-strip-banner": "^1.0.0"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0 || ^17.0.0"
   },
   "files": [
     "LICENSE",
